Fix: address full-image-container spill and overflow w/ aspect-ratio
Depending on the screen size min-height/max-height were causing images
to obscure critical interface elements and introducing gaps beneath the
container. aspect-ratio achieves a superior effect w/o any of these
undesirable behaviors.

--- a/src/_sass/_components.scss
+++ b/src/_sass/_components.scss
@@ -268,8 +268,7 @@ footer.main {
 	padding-top: var(--space-size-xs);
 	position: relative;
 	color: var(--on-dark-text);
-	min-height: 600px;
-	max-height: 1000px;
+	aspect-ratio: 16 / 9;
 
 	.full-image {
 		object-fit: cover;
